Forced vertical scrollbar to prevent horizontal jumps

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,6 @@
+html {
+    overflow-y:     scroll;
+}
 html, body {
     height:         100%;
 }
